supported BaseFragment in most activities

--- a/app/src/main/res/layout/activity_search_users.xml
+++ b/app/src/main/res/layout/activity_search_users.xml
@@ -50,15 +50,15 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="toolbar" />
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.tyron.hanapbb.ui.fragments.SearchUsersFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:layout="@layout/fragment_search_users" />
+<!--    <fragment-->
+<!--        android:id="@+id/fragment"-->
+<!--        android:name="com.tyron.hanapbb.ui.fragments.SearchUsersFragment"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
+<!--        tools:layout="@layout/fragment_search_users" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
